@@ -15,17 +15,17 @@ sub from_sets {
   my ($self, $set1, $set2) = @_;
   $self->_make_elem_list($set1,$set2);
 
-  return $self->_cosine( 
-	norm($self->_make_vector( $set1 )), 
-	norm($self->_make_vector( $set2 )) 
-  );	
+  return $self->_cosine(
+	norm($self->_make_vector( $set1 )),
+	norm($self->_make_vector( $set2 ))
+  );
 }
 
 sub _make_vector {
   my ( $self, $tokens ) = @_;
   my %elements = $self->_get_elements( $tokens );
   my $vector = zeroes $self->{'elem_count'};
-	
+
   for my $key ( keys %elements ) {
 	my $value = $elements{$key};
 	my $offset = $self->{'elem_index'}->{$key};
@@ -34,12 +34,12 @@ sub _make_vector {
   return $vector;
 }
 
-sub _get_elements {			
+sub _get_elements {
   my ( $self, $tokens ) = @_;
-  my %elements;  
+  my %elements;
   do { $_++ } for @elements{@$tokens};
   return %elements;
-}	
+}
 
 sub _make_elem_list {
   my ( $self,$tokens1,$tokens2 ) = @_;
@@ -50,12 +50,12 @@ sub _make_elem_list {
 	  $all_elems{$key} += $elements{$key};
 	}
   }
-	
+
   # create a lookup hash
   my %lookup;
   my @sorted_elems = sort keys %all_elems;
   @lookup{@sorted_elems} = (0..scalar(@sorted_elems)-1 );
-	
+
   $self->{'elem_index'} = \%lookup;
   $self->{'elem_list'} = \@sorted_elems;
   $self->{'elem_count'} = scalar @sorted_elems;
@@ -89,11 +89,11 @@ Set::Similarity::CosinePDL - Cosine similarity for sets PDL implementation
 =head1 SYNOPSIS
 
  use Set::Similarity::CosinePDL;
- 
+
  # object method
  my $cosine = Set::Similarity::CosinePDL->new;
  my $similarity = $cosine->similarity('Photographer','Fotograf');
- 
+
 
 =head1 DESCRIPTION
 
@@ -110,9 +110,9 @@ following new ones.
 =head2 from_sets
 
   my $similarity = $object->from_sets(['a'],['b']);
- 
+
 This method expects two arrayrefs of strings as parameters. The parameters are not checked, thus can lead to funny results or uncatched divisions by zero.
- 
+
 If you want to use this method directly, you should take care that the elements are unique. Also you should catch the situation where one of the arrayrefs is empty (similarity is 0), or both are empty (similarity is 1).
 
 =head1 SOURCE REPOSITORY
@@ -131,7 +131,7 @@ Helmut Wollmersdorfer, E<lt>helmut.wollmersdorfer@gmail.comE<gt>
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright (C) 2013-2015 by Helmut Wollmersdorfer
+Copyright (C) 2013-2020 by Helmut Wollmersdorfer
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself.
